--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   "minimum-stability": "stable",
   "require-dev": {
     "codeception/codeception": ">2.0",
-    "alphagov/notifications-php-client": "^1.0"
+    "alphagov/notifications-php-client": "^1.0",
+    "friendsofphp/php-cs-fixer": "^2.15"
   }
 }
