--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "dxw/codeception-notify-module",
   "description": "Codeception module for acceptance testing an application that uses Gov.uk Notify",
   "version": "0.2.0",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "authors": [
     {
       "name": "Rob Skilling",
